        we do not recommend using patchless RHEL4 clients with kernels
        prior to 2.6.9-55EL (RHEL4U5).
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 14321
Description: lustre_mgs: operation 101 on unconnected MGS
Details    : When MGC is disconnected from MGS long enough, MGS will evict the
             MGC, and late on MGC cannot successfully connect to MGS and a lot
	     of the error messages complaining that MGS is not connected.

Severity   : enhancement
Bugzilla   : 13397
Description: Add server support for vanilla-2.6.22.14.

Severity   : major
Frequency  : rare, depends on device drivers and load
Bugzilla   : 14529
Description: MDS or OSS nodes crash due to stack overflow
Details    : Code changes in 1.6.4 increased the stack usage of some functions.
	     In some cases, in conjunction with device drivers that use a lot
	     of stack, the MDS (or possibly OSS) service threads could overflow
	     the stack.  One change which was identified to consume additional
	     stack has been reworked to avoid the extra stack usage.

Severity   : enhancement
Bugzilla   : 14876
Description: Update to RHEL5 latest kernel-2.6.18-53.1.13.el5.

Severity   : enhancement
Bugzilla   : 14858
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.5.

Severity   : enhancement
Bugzilla   : 14720
Description: Update to RHEL5 latest kernel-2.6.18-53.1.6.el5.

Serverity  : enhancement
Bugzilla   : 14793
Description: Update RHEL4 kernel to 2.6.9-67.0.4.

Severity   : minor
Frequency  : rare on shutdown ost
Bugzilla   : 13196
Description: Don't allow skipping OSTs if index has been specified.
Details    : Don't allow skipping OSTs if index has been specified, make locking
	     in internal create lots better.

Severity   : normal