@@ -573,6 +573,10 @@ void mdc_set_open_replay_data(struct obd_client_handle *och,
                                                DLM_REPLY_REC_OFF,
                                                sizeof(*body));
 
+        /* If request is not eligible for replay, just bail out */
+        if (!open_req->rq_replay)
+                return;
+
         /* incoming message in my byte order (it's been swabbed) */
         LASSERT(rec != NULL);
         LASSERT(lustre_rep_swabbed(open_req, DLM_REPLY_REC_OFF));
@@ -587,12 +591,6 @@ void mdc_set_open_replay_data(struct obd_client_handle *och,
                 }
 
                 spin_lock(&open_req->rq_lock);
-                if (!open_req->rq_replay) {
-                        OBD_FREE(mod, sizeof(*mod));
-                        spin_unlock(&open_req->rq_lock);
-                        return;
-                }
-
                 och->och_mod = mod;
                 mod->mod_och = och;
                 mod->mod_open_req = open_req;
